--- a/Benutzer/views/anmelden.ejs
+++ b/Benutzer/views/anmelden.ejs
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Neuer Artikel</title>
+		<title>Registrieren</title>
 	</head>
 	<body>
 		<form action="/onNewUser" method="POST">
