--- a/Benutzer/views/profil.ejs
+++ b/Benutzer/views/profil.ejs
@@ -4,6 +4,7 @@
     </head>
     <body>
         <h1>Erfolgreich angemeldet</h1>
+		Hallo <%= user %><br>
 		<a href ="/sessionLoeschen">logout</a><br>
     </body>
 </html>
