--- a/Benutzer/views/anmelden.ejs
+++ b/Benutzer/views/anmelden.ejs
@@ -1,13 +1,9 @@
-<html>
-	<head>
-		<title>Registrieren</title>
-	</head>
-	<body>
-		<form action="/onNewUser" method="POST">
-			Username: <input type="text"  name="userName"> <br>
-			Password: <input type="password" name="password"> <br>
-			<button type="submit">Registrieren</button>
-		</form>
-		<a href="/login">Bereits registriert</a><br>
-	</body>
-</html>
+<NotepadPlus>
+    <Session activeView="0">
+        <mainView activeIndex="1">
+            <File firstVisibleLine="37" xOffset="0" scrollWidth="1130" startPos="1817" endPos="1817" selMode="0" lang="JavaScript" encoding="-1" filename="C:\Users\Melina\AGPR\Benutzer\server.js" backupFilePath="" originalFileLastModifTimestamp="1525858783" mapFirstVisibleDisplayLine="-1" mapFirstVisibleDocLine="-1" mapLastVisibleDocLine="-1" mapNbLine="-1" mapHigherPos="-1" mapWidth="-1" mapHeight="-1" mapKByteInDoc="1480907088" mapWrapIndentMode="-1" mapIsWrap="no" />
+            <File firstVisibleLine="0" xOffset="0" scrollWidth="660" startPos="349" endPos="349" selMode="0" lang="Normaler Text" encoding="-1" filename="C:\Users\Melina\AGPR\Benutzer\views\anmelden.txt" backupFilePath="" originalFileLastModifTimestamp="1525858809" mapFirstVisibleDisplayLine="-1" mapFirstVisibleDocLine="-1" mapLastVisibleDocLine="-1" mapNbLine="-1" mapHigherPos="-1" mapWidth="-1" mapHeight="-1" mapKByteInDoc="0" mapWrapIndentMode="-1" mapIsWrap="no" />
+        </mainView>
+        <subView activeIndex="0" />
+    </Session>
+</NotepadPlus>
